--- a/tests/fixtures/apimock.toml
+++ b/tests/fixtures/apimock.toml
@@ -7,7 +7,7 @@ response_wait = 100
 # verbose = { header = true, body = true }
 
 [url]
-data_dir = "tests"
+data_dir = "tests/fixtures"
 data_dir_query_path = "@@"
 path_prefix = "api/v1"
 
