--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -80,6 +80,13 @@ jobs:
           RELEASE_ASSET_FILENAME=${RELEASE_ASSET_BASENAME}${{ matrix.archive_ext }}
           mkdir -p "${{ env.JOB_WORKDIR }}/${RELEASE_SRC_DIR}"
           mv "${BUILT_FILEPATH}" "${{ env.JOB_WORKDIR }}/${RELEASE_SRC_DIR}/"
+
+          curl -LO --output-dir "${{ env.JOB_WORKDIR }}/${RELEASE_SRC_DIR}/" https://github.com/nabbisen/apimock-rs/blob/main/examples/config/apimock.toml
+          mkdir "${{ env.JOB_WORKDIR }}/${RELEASE_SRC_DIR}/apimock-data"
+          curl -LO --output-dir "${{ env.JOB_WORKDIR }}/${RELEASE_SRC_DIR}/apimock-data/" https://github.com/nabbisen/apimock-rs/blob/main/examples/config/apimock-data/api.json5
+          curl -LO --output-dir "${{ env.JOB_WORKDIR }}/${RELEASE_SRC_DIR}/apimock-data/" https://github.com/nabbisen/apimock-rs/blob/main/examples/config/apimock-data/home.json
+          mkdir "${{ env.JOB_WORKDIR }}/${RELEASE_SRC_DIR}/apimock-dyn-data"
+
           echo "RELEASE_SRC_DIR=${RELEASE_SRC_DIR}" >> $GITHUB_ENV
           echo "RELEASE_ASSET_FILENAME=${RELEASE_ASSET_FILENAME}" >> $GITHUB_ENV
 
