--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -22,21 +22,21 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Linux-aarch64-musl
-            target: aarch64-unknown-linux-musl
-            os: ubuntu-latest
-            bin_ext: 
-            archive_ext: .tar.gz
+          # - name: Linux-aarch64-musl
+          #   target: aarch64-unknown-linux-musl
+          #   os: ubuntu-latest
+          #   bin_ext: 
+          #   archive_ext: .tar.gz
           - name: Linux-x64-gnu
             target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
             bin_ext: 
             archive_ext: .tar.gz
-          - name: Linux-x64-musl
-            target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-            bin_ext: 
-            archive_ext: .tar.gz
+          # - name: Linux-x64-musl
+          #   target: x86_64-unknown-linux-musl
+          #   os: ubuntu-latest
+          #   bin_ext: 
+          #   archive_ext: .tar.gz
           - name: macOS-aarch64
             target: aarch64-apple-darwin
             os: macos-latest
