--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -22,11 +22,11 @@ jobs:
     strategy:
       matrix:
         include:
-          # - name: Linux-aarch64-musl
-          #   target: aarch64-unknown-linux-musl
-          #   os: ubuntu-latest
-          #   bin_ext: 
-          #   archive_ext: .tar.gz
+          - name: Linux-aarch64-musl
+            target: aarch64-unknown-linux-musl
+            os: ubuntu-latest
+            bin_ext: 
+            archive_ext: .tar.gz
           - name: Linux-x64-gnu
             target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
@@ -53,12 +53,18 @@ jobs:
         uses: actions/checkout@v4
 
       # [ fltk build preparation ]
-      - name: Install fltk-rs requirements on x64 Linux
+      - name: Install fltk-rs requirements on x64 gnu Linux
         if: matrix.target == 'x86_64-unknown-linux-gnu'
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends libx11-dev libxext-dev libxft-dev libxinerama-dev libxcursor-dev libxrender-dev libxfixes-dev libpango1.0-dev libgl1-mesa-dev libglu1-mesa-dev
-
+      
+      - name: Install fltk-rs requirements on musl Linux
+        if: matrix.target == 'aarch64-unknown-linux-musl' || matrix.target == 'x86_64-unknown-linux-musl'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends musl-tools musl-dev pkg-config build-essential
+      
       # [ build ]
       - name: Install Rust
         run: bash .github/workflows/scripts/install-rust.sh stable ${{ matrix.target }}
