fix built exe name; update readme

--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -12,7 +12,7 @@ defaults:
     shell: bash
 
 env:
-  PRODUCT_BASENAME: apimimic
+  PRODUCT_BASENAME: apimokka
   TAG: ${{ github.ref_name }}            # tag or branch name
   JOB_WORKDIR: tmp-${{ github.run_id }}  # unique number
 
