--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "apimokka"
-version = "0.1.4"
+version = "0.2.0"
 edition = "2021"
 
 description = "Mock with mokka ☕️🌄 Visual mocking helper to handle API mock Server generating HTTP/JSON responses"
@@ -30,3 +30,6 @@ incremental = true
 apimock = { version = "2", features = ["spawn"] }
 fltk = { version = "1", features = ["fltk-bundled"] }
 tokio = "^1.44"
+
+[package.metadata.docs.rs]
+dependencies.fltk = { version = "1", default-features = false }
