--- a/tests/fixtures/apimock.toml
+++ b/tests/fixtures/apimock.toml
@@ -1,6 +1,8 @@
-[general]
+[listener]
 ip_address = "127.0.0.1"
 port = 3001
+
+[general]
 dyn_data_dir = "apimock-data"
 # always = "{ greetings: \"Hello, world.\" }"
 response_wait = 100
@@ -8,6 +10,7 @@ response_wait = 100
 
 [url]
 data_dir = "tests/fixtures"
+# todo: move to commands
 data_dir_query_path = "@@"
 path_prefix = "api/v1"
 
