--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -30,7 +30,7 @@ jobs:
             archive_ext: .tar.gz
             napiplatform: linux-x64-gnu
           - name: macOS-aarch64
-            target: aarch64-apple-darwin
+            target: x86_64-apple-darwin
             os: macos-latest
             archive_ext: .zip
             napiplatform: darwin-x64
