--- a/napi/package.json
+++ b/napi/package.json
@@ -5,7 +5,14 @@
     "types": "index.d.ts",
     "napi": {
         "name": "apimokka",
-        "triples": {}
+        "triples": {
+            "defaults": false,
+            "additional": [
+                "x86_64-unknown-linux-gnu",
+                "arm64-apple-darwin",
+                "x86_64-pc-windows-msvc"
+            ]
+        }
     },
     "license": "Apache-2.0",
     "devDependencies": {
