--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: yarn
+          cache: npm
       
       - name: Prepare napi
         run: cp -r napi/* .
@@ -64,7 +64,7 @@ jobs:
         # working-directory: napi
       
       - name: Install npm packages
-        run: yarn install
+        run: npm run install
       
       # [ build ]
       - name: Install Rust
@@ -83,7 +83,7 @@ jobs:
 
       - name: Build Rust executable
         run: |
-          yarn build
+          npm run build
 
       # [ release asset ]
       - name: Upload artifact
@@ -146,22 +146,28 @@ jobs:
       - build
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup node
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: yarn
+          cache: npm
+      
       - name: Install dependencies
-        run: yarn install
+        run: npm run install
+      
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
+      
       - name: Move artifacts
-        run: yarn artifacts
+        run: npm run artifacts
+      
       - name: List packages
         run: ls -R ./npm
         shell: bash
+      
       # - name: Publish
       #   run: |
       #     npm config set provenance true
