--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,13 @@ target/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+node_modules/
+*.node
+bun.lock
+bun.lockb
+.env
+.env.*
+!.env.example
+/napi/index.js
+/napi/index.d.ts
