--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -64,7 +64,7 @@ jobs:
           cache: npm
       
       - name: Install npm packages
-        run: npm run install
+        run: npm install
       
       # [ build ]
       - name: Install Rust
@@ -159,7 +159,7 @@ jobs:
           cache: npm
       
       - name: Install dependencies
-        run: npm run install
+        run: npm install
       
       - name: Download all artifacts
         uses: actions/download-artifact@v4
