specify build targets

--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Build Rust executable
         run: |
-          npm run build
+          npm run build --target ${{ matrix.target }}
 
       # [ release asset ]
       - name: Upload artifact
