--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -140,10 +140,11 @@ jobs:
       #   run: gh release upload ${{ github.ref_name }} ${RELEASE_ASSET_FILENAME}
  
   publish:
-    name: Publish
-    runs-on: ubuntu-latest
+    name: Publish on release tags
+    if: startsWith(github.ref, 'refs/tags/') && github.ref_name =~ '^\\d+\\.\\d+\\.\\d+$'
     needs:
       - build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -173,20 +174,11 @@ jobs:
         run: ls -R ./npm
         shell: bash
       
-      # - name: Publish
-      #   run: |
-      #     npm config set provenance true
-      #     if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
-      #     then
-      #       echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      #       npm publish --access public
-      #     elif git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+";
-      #     then
-      #       echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      #       npm publish --tag next --access public
-      #     else
-      #       echo "Not a release, skipping publish"
-      #     fi
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm config set provenance true
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+          npm publish --access public
