fix required fiekds in package.json lacked; prevent gh create by napi `artifacts` command

--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -177,7 +177,7 @@ jobs:
           path: artifacts
       
       - name: Move artifacts
-        run: npm run artifacts
+        run: npm run prepublishOnly
       
       - name: List packages
         run: ls -R ./npm
