--- a/napi/package.json
+++ b/napi/package.json
@@ -15,6 +15,7 @@
         }
     },
     "license": "Apache-2.0",
+    "repository": "github:nabbisen/apimokka",
     "devDependencies": {
         "@napi-rs/cli": "^2.18.4",
         "ava": "^6.3.0"
