--- a/napi/.npmignore
+++ b/napi/.npmignore
@@ -1,16 +1,15 @@
 .cargo
 .github
 .vscode
-.yarn
 __test__
 node_modeles
+napi
 npm
+src
 target
-.eslintrc
-.prettierignore
-*.node
+tests
+*.rs
 Cargo.lock
-rustfmt.toml
+Cargo.toml
 package-lock.json
-yarn.lock
 renovate.json
