--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -131,7 +131,7 @@ jobs:
       - name: Move artifacts
         run: |
           npm run create-npm-dir
-          npm run artifacts -- --gh-release-id ${{ env.TAG }}
+          npm run artifacts
       
       - name: List packages
         run: ls -R ./npm
@@ -144,4 +144,4 @@ jobs:
         run: |
           npm config set provenance true
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-          npm publish --access public
+          npm publish --access public -- --gh-release-id ${{ env.TAG }}
