--- a/napi/package.json
+++ b/napi/package.json
@@ -18,7 +18,10 @@
         }
     },
     "license": "Apache-2.0",
-    "repository": "github:nabbisen/apimokka",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nabbisen/apimokka.git"
+    },
     "devDependencies": {
         "@napi-rs/cli": "^2.18.4",
         "ava": "^6.3.0"
