--- a/npm/win32-x64-msvc/package.json
+++ b/npm/win32-x64-msvc/package.json
@@ -1,36 +1,36 @@
 {
-    "name": "@apimokka/win32-x64-msvc",
-    "version": "4.0.0-rc.12",
-    "os": [
-        "win32"
-    ],
-    "cpu": [
-        "x64"
-    ],
-    "files": [
-        "apimokka.exe"
-    ],
-    "description": "API mock (apimock-rs) based visual mocking helper to handle HTTP/JSON req/res written in Rust. Mock with mokka ☕️🌄",
-    "author": "nabbisen<nabbisen@scqr.net>",
-    "license": "Apache-2.0",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/nabbisen/apimokka.git"
-    },
-    "keywords": [
-        "api",
-        "mock",
-        "server",
-        "http",
-        "json",
-        "route-matching",
-        "dynamic-routing",
-        "custom-routes",
-        "gui",
-        "devtool",
-        "developer-tool",
-        "testing",
-        "stub",
-        "simulate"
-    ]
+  "name": "@apimokka/win32-x64-msvc",
+  "version": "0.9.0",
+  "os": [
+    "win32"
+  ],
+  "cpu": [
+    "x64"
+  ],
+  "files": [
+    "apimokka.exe"
+  ],
+  "description": "API mock (apimock-rs) based visual mocking helper to handle HTTP/JSON req/res written in Rust. Mock with mokka ☕️🌄",
+  "author": "nabbisen<nabbisen@scqr.net>",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nabbisen/apimokka.git"
+  },
+  "keywords": [
+    "api",
+    "mock",
+    "server",
+    "http",
+    "json",
+    "route-matching",
+    "dynamic-routing",
+    "custom-routes",
+    "gui",
+    "devtool",
+    "developer-tool",
+    "testing",
+    "stub",
+    "simulate"
+  ]
 }
