--- a/npm/package.json
+++ b/npm/package.json
@@ -18,9 +18,9 @@
     "postinstall": "node postinstall.js"
   },
   "optionalDependencies": {
-    "@apimokka/linux-x64-gnu": "0.9.0",
-    "@apimokka/darwin-arm64": "0.9.0",
-    "@apimokka/win32-x64-msvc": "0.9.0"
+    "@apimokka/bin-linux-x64-gnu": "0.9.0",
+    "@apimokka/bin-darwin-arm64": "0.9.0",
+    "@apimokka/bin-win32-x64-msvc": "0.9.0"
   },
   "keywords": [
     "api",
